complex timeseries reader/writer + test